force-app/main/default/objects/Specialist_Request__c/Specialist_Request__c.object-meta.xml
<CustomObject>
    <label>Specialist Request</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Specialist Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialist Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>