force-app/main/default/objects/Specialist_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Specialist Requests</relationshipLabel>
    <relationshipName>Specialist_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>