force-app/main/default/objects/Specialist_Request__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Account_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Tier</label>
    <type>Text</type>
</CustomField>