force-app/main/default/objects/Specialist_Request__c/fields/Amount_ACV_Current__c.field-meta.xml
<CustomField>
    <fullName>Amount_ACV_Current__c</fullName>
    <formula>Opportunity__r.ACV_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (ACV) - Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>