force-app/main/default/objects/Specialist_Request__c/fields/Amount_From_Submission_to_Current__c.field-meta.xml
<CustomField>
    <fullName>Amount_From_Submission_to_Current__c</fullName>
    <formula>Opportunity__r.Amount -  Opportunity_Amount_When_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount From Submission to Current</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>