force-app/main/default/objects/Specialist_Request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>IF( 
OR(TEXT( Status__c ) = &quot;Specialist Accepted&quot;,TEXT( Status__c ) = &quot;Completed&quot;), 
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 15), 
IF( 
OR(TEXT( Status__c ) = &quot;Specialist Accepted&quot;,TEXT( Status__c ) = &quot;Canceled&quot;), 
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 15), 
IF( 
OR(TEXT(Status__c) = &quot;Draft&quot;), 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 15)&amp;&quot; Ensure the Request is Submitted For Approval&quot;, 
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, 15) 

) 
)
)</formula>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>