force-app/main/default/objects/Specialist_Request__c/fields/Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This stores the user who is going to approve this record. Value is populated from trigger.</description>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Specialist_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>