force-app/main/default/objects/Specialist_Request__c/fields/Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This stores the second user who is going to approve this record. Value is populated from trigger.</description>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Specialist_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>