force-app/main/default/objects/Specialist_Request__c/fields/Assigner_1__c.field-meta.xml
<CustomField>
    <fullName>Assigner_1__c</fullName>
    <label>Assigner 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>