force-app/main/default/objects/Specialist_Request__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rubrik Account Team</fullName>
            </value>
            <value>
                <fullName>Channel Partner Account Team</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>