force-app/main/default/objects/Specialist_Request__c/fields/Audience_Level__c.field-meta.xml
<CustomField>
    <fullName>Audience_Level__c</fullName>
    <label>Audience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Middle Management</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>