force-app/main/default/objects/Specialist_Request__c/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <label>Audience Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Rubrik Internal</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>