force-app/main/default/objects/Specialist_Request__c/fields/Background_on_Primary_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Background_on_Primary_Attendees__c</fullName>
    <inlineHelpText>Who from the customer will be attending?  Who will be attending from Rubrik? (SE&apos;s are required to attend)</inlineHelpText>
    <label>Attendees</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>