force-app/main/default/objects/Specialist_Request__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Specialist Requests</relationshipLabel>
    <relationshipName>Specialist_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>