force-app/main/default/objects/Specialist_Request__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <inlineHelpText>Ex - Number of databases, size of workloads, largest single DB, file, etc. Discovery is required for Specialist engagement</inlineHelpText>
    <label>Environment Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>