force-app/main/default/objects/Specialist_Request__c/fields/Close_Code_Comments__c.field-meta.xml
<CustomField>
    <fullName>Close_Code_Comments__c</fullName>
    <label>Close Code Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>