force-app/main/default/objects/Specialist_Request__c/fields/Conditional_Message__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Message__c</fullName>
    <formula>IF (
    ISBLANK ( SE_Manager__c ) ,
    IMAGE(&quot;/img/msg_icons/warning16.png&quot; , &quot;Warning&quot;) &amp; &quot; SE Manager Not Present.&quot; ,
    IMAGE(&quot;/img/msg_icons/confirm16.png&quot; , &quot;No Error&quot;)
)</formula>
    <label>Conditional Message</label>
    <type>Text</type>
</CustomField>