force-app/main/default/objects/Specialist_Request__c/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <inlineHelpText>How does the customer protect the workload today?  Details are required.</inlineHelpText>
    <label>Current State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>