force-app/main/default/objects/Specialist_Request__c/fields/Date_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting__c</fullName>
    <label>Date to be Completed</label>
    <type>Date</type>
</CustomField>