force-app/main/default/objects/Specialist_Request__c/fields/Date_Submitted_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_For_Approval__c</fullName>
    <label>Date Submitted For Approval</label>
    <type>Date</type>
</CustomField>