force-app/main/default/objects/Specialist_Request__c/fields/Days_Between_Request_and_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Request_and_Meeting__c</fullName>
    <formula>Date_of_Meeting__c - Date_Submitted_For_Approval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Between Request and Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>