force-app/main/default/objects/Specialist_Request__c/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <formula>TEXT( Primary_Focus_Area__c ) &amp; &quot; - &quot; &amp; TEXT( Secondary_Focus_Area__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Focus Area</label>
    <type>Text</type>
</CustomField>