force-app/main/default/objects/Specialist_Request__c/fields/Goal_Of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Goal_Of_Meeting__c</fullName>
    <inlineHelpText>Please provide details on the goal of the meeting and why a Specialist is required.</inlineHelpText>
    <label>Goal Of Meeting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>