force-app/main/default/objects/Specialist_Request__c/fields/Identified_Pain_Competitive_Intel__c.field-meta.xml
<CustomField>
    <fullName>Identified_Pain_Competitive_Intel__c</fullName>
    <inlineHelpText>Is this a competitive opportunity?  What have you identified as pain?</inlineHelpText>
    <label>Identified Pain / Competitive Intel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>