force-app/main/default/objects/Specialist_Request__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
                <default>true</default>
                <label>Virtual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>