force-app/main/default/objects/Specialist_Request__c/fields/On_Site_Justification__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Justification__c</fullName>
    <label>On-Site Justification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>