force-app/main/default/objects/Specialist_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Specialist Requests</relationshipLabel>
    <relationshipName>Specialist_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>