force-app/main/default/objects/Specialist_Request__c/fields/Opportunity_Amount_When_Requested__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_When_Requested__c</fullName>
    <label>Opportunity Amount When Requested</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>