force-app/main/default/objects/Specialist_Request__c/fields/Opportunity_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Current_Stage__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Current Stage</label>
    <type>Text</type>
</CustomField>