force-app/main/default/objects/Specialist_Request__c/fields/Opportunity_Stage_When_Requested__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_When_Requested__c</fullName>
    <label>Opportunity Stage When Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>