force-app/main/default/objects/Specialist_Request__c/fields/Opportunity_Theater__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Theater__c</fullName>
    <formula>Opportunity__r.ETM_Theatre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Theater</label>
    <type>Text</type>
</CustomField>