force-app/main/default/objects/Specialist_Request__c/fields/Policy_Validation__c.field-meta.xml
<CustomField>
    <fullName>Policy_Validation__c</fullName>
    <formula>IF( 
			AND(
				TEXT(Location__c) = &quot;Onsite&quot;,  
				(Date_of_Meeting__c - TODAY()) &lt; 18, 
				ISBLANK(Date_Submitted_For_Approval__c) 
			) , 
			IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 15)&amp; &quot; Violates Corp Travel Policy - Can it be done virtually?&quot;,

			IF( 
				AND(
					TEXT(Location__c) = &quot;Onsite&quot;,  
					(Date_of_Meeting__c - Date_Submitted_For_Approval__c) &lt; 18, 
					NOT(ISBLANK(Date_Submitted_For_Approval__c)) 
				) , 
				IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 15) &amp; &quot; Violates Corp Travel Policy - Can it be done virtually?&quot;, null
			)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Validation</label>
    <type>Text</type>
</CustomField>