force-app/main/default/objects/Specialist_Request__c/fields/Primary_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Focus_Area__c</fullName>
    <label>Primary Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Archiving</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Cloud Native</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Hypervisor</fullName>
            </value>
            <value>
                <fullName>Kubernetes</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Technical Product Manager</fullName>
            </value>
            <value>
                <fullName>Volumes / Filesets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>