force-app/main/default/objects/Specialist_Request__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champion Building</fullName>
            </value>
            <value>
                <fullName>Champion Enabling</fullName>
            </value>
            <value>
                <fullName>RFx Assistance</fullName>
            </value>
            <value>
                <fullName>Strategy/Knowledge Sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>