force-app/main/default/objects/Specialist_Request__c/fields/Relevant_Areas_Already_Covered__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Areas_Already_Covered__c</fullName>
    <defaultValue>&quot;If the meeting is already scheduled we will make a best effort to assign a resource.  72 hours advance notice is required&quot;</defaultValue>
    <label>Meeting Date and Time</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>