force-app/main/default/objects/Specialist_Request__c/fields/SE_Manager__c.field-meta.xml
<CustomField>
    <fullName>SE_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SE Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>selected SE Manager OR Opportunity&apos;s Rubrik Sales Engineer&apos;s Manager must be of standard user type</errorMessage>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Specialist_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>