force-app/main/default/objects/Specialist_Request__c/fields/SE_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>SE_Manager_Id__c</fullName>
    <formula>Opportunity__r.Rubrik_Sales_Engineer__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SE Manager Id</label>
    <type>Text</type>
</CustomField>