force-app/main/default/objects/Specialist_Request__c/fields/Secondary_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Focus_Area__c</fullName>
    <label>Secondary Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Focus_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Actifio</fullName>
            </value>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>AHV</fullName>
            </value>
            <value>
                <fullName>Arcserve</fullName>
            </value>
            <value>
                <fullName>Avamar</fullName>
            </value>
            <value>
                <fullName>AvePoint</fullName>
                <label>Avepoint</label>
            </value>
            <value>
                <fullName>AWS (EC2, RDS, Aurora, etc)</fullName>
            </value>
            <value>
                <fullName>AWS Native</fullName>
            </value>
            <value>
                <fullName>Azure (Azure VM, Azure SQL, etc)</fullName>
            </value>
            <value>
                <fullName>Azure Native</fullName>
            </value>
            <value>
                <fullName>Barracuda</fullName>
            </value>
            <value>
                <fullName>BackupExec</fullName>
            </value>
            <value>
                <fullName>Cassandra</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Cloud On</fullName>
            </value>
            <value>
                <fullName>Cloud Out</fullName>
            </value>
            <value>
                <fullName>Clumio</fullName>
            </value>
            <value>
                <fullName>Cohesity</fullName>
            </value>
            <value>
                <fullName>CommVault</fullName>
            </value>
            <value>
                <fullName>Cyber Recovery</fullName>
            </value>
            <value>
                <fullName>DataDomain</fullName>
            </value>
            <value>
                <fullName>Datto</fullName>
            </value>
            <value>
                <fullName>DB2</fullName>
            </value>
            <value>
                <fullName>Dell APEX/Druva</fullName>
            </value>
            <value>
                <fullName>DellEMC DPS (Data Protection Suite)</fullName>
            </value>
            <value>
                <fullName>DellEMC PowerProtect</fullName>
            </value>
            <value>
                <fullName>Druva</fullName>
            </value>
            <value>
                <fullName>Epic / Cache</fullName>
            </value>
            <value>
                <fullName>ExaGrid</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>