force-app/main/default/objects/Specialist_Request__c/fields/Specialist_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialist Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Specialist_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>