force-app/main/default/objects/Specialist_Request__c/fields/Specialist_Feedback_to_Manager__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Feedback_to_Manager__c</fullName>
    <label>Specialist Feedback to Manager</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>