force-app/main/default/objects/Specialist_Request__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <formula>Opportunity__r.ETM_Territory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory</label>
    <type>Text</type>
</CustomField>