force-app/main/default/objects/Specialist_Request__c/fields/Topics_to_Avoid__c.field-meta.xml
<CustomField>
    <fullName>Topics_to_Avoid__c</fullName>
    <label>Topics to Avoid</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>