force-app/main/default/objects/Specialist_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Support/Customer Escalation</fullName>
            </value>
            <value>
                <fullName>RBR Artifact Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>