force-app/main/default/objects/Specialist_Request__c/fields/Validation_Code__c.field-meta.xml
<CustomField>
    <fullName>Validation_Code__c</fullName>
    <description>SF-1734 - Specialist Request - Validation Code</description>
    <label>Validation Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Appropriate</fullName>
                <isActive>false</isActive>
                <label>Appropriate</label>
            </value>
            <value>
                <fullName>Lack of Preparation</fullName>
                <isActive>false</isActive>
                <label>Lack of Preparation</label>
            </value>
            <value>
                <fullName>No Customer Commitment</fullName>
                <isActive>false</isActive>
                <label>No Customer Commitment</label>
            </value>
            <value>
                <fullName>SE Education</fullName>
                <isActive>false</isActive>
                <label>SE Education</label>
            </value>
            <value>
                <fullName>Wrong Audience</fullName>
                <isActive>false</isActive>
                <label>Wrong Audience</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>