force-app/main/default/objects/Specialist_Request__c/fields/What_Has_Been_Discussed__c.field-meta.xml
<CustomField>
    <fullName>What_Has_Been_Discussed__c</fullName>
    <inlineHelpText>What have you presented as for as pitch, demos, conversations, etc?</inlineHelpText>
    <label>What Has Been Discussed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>