force-app/main/default/objects/Specialist_Request__c/recordTypes/Competitive_Request.recordType-meta.xml
<RecordType>
    <fullName>Competitive_Request</fullName>
    <active>true</active>
    <label>Competitive Request</label>
</RecordType>