force-app/main/default/objects/Specialist_Request__c/recordTypes/Inside_Services_Desk.recordType-meta.xml
<RecordType>
    <fullName>Inside_Services_Desk</fullName>
    <active>true</active>
    <label>Inside Services Desk</label>
</RecordType>