force-app/main/default/objects/Specialist_Request__c/recordTypes/Ranger.recordType-meta.xml
<RecordType>
    <fullName>Ranger</fullName>
    <active>true</active>
    <label>Ranger</label>
</RecordType>