force-app/main/default/objects/Specialist_Request__c/recordTypes/Specialists_Request.recordType-meta.xml
<RecordType>
    <fullName>Specialists_Request</fullName>
    <active>true</active>
    <label>Specialists Request</label>
</RecordType>