force-app/main/default/objects/Specialist_Request__c/recordTypes/Technical_Product_Manager_TPM.recordType-meta.xml
<RecordType>
    <fullName>Technical_Product_Manager_TPM</fullName>
    <active>true</active>
    <label>Technical Product Manager (TPM)</label>
</RecordType>