force-app/main/default/objects/Specialist_Request__c/validationRules/Competitive_Close_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitive_Close_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name = &quot;Competitive Request&quot;,  TEXT( Validation_Code__c ) = &quot;Closed&quot;, OR( ISBLANK(TEXT(Purpose__c)),ISBLANK(TEXT(Audience__c )),ISBLANK(TEXT(Audience_Level__c )),ISBLANK( TEXT(Audience_Type__c ))))</errorConditionFormula>
    <errorMessage>When closing a Competitive SR please ensure Purpose, Audience, Audience Level, and Audience Type are also completed.</errorMessage>
</ValidationRule>