force-app/main/default/objects/Specialist_Request__c/validationRules/OnSite_Justification_is_needed.validationRule-meta.xml
<ValidationRule>
    <fullName>OnSite_Justification_is_needed</fullName>
    <active>false</active>
    <description>On-Site Justification is needed when meeting location is onsite.</description>
    <errorConditionFormula>AND(ISBLANK( On_Site_Justification__c ), TEXT(Location__c) = &quot;Onsite&quot;)</errorConditionFormula>
    <errorDisplayField>On_Site_Justification__c</errorDisplayField>
    <errorMessage>On-Site Justification is needed when meeting location is onsite.</errorMessage>
</ValidationRule>