force-app/main/default/objects/Specialist_Request__c/validationRules/Specialist_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Specialist_Assigned</fullName>
    <active>true</active>
    <description>A specialist cannot be assigned until the request is approved</description>
    <errorConditionFormula>AND(
OR(
TEXT(Status__c) = &quot;Draft&quot;, 
TEXT(Status__c) = &quot;Submitted&quot;,
TEXT(Status__c) = &quot;SEM Approved&quot;
), NOT(ISBLANK(Specialist_Assigned__c)))</errorConditionFormula>
    <errorDisplayField>Specialist_Assigned__c</errorDisplayField>
    <errorMessage>A specialist cannot be assigned until the request is approved.</errorMessage>
</ValidationRule>