force-app/main/default/objects/Specialist_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Primary_Focus_Area__c</columns>
    <columns>Specialist_Assigned__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Date_of_Meeting__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>