force-app/main/default/objects/Specialist_Request__c/listViews/Open_SRs.listView-meta.xml
<ListView>
    <fullName>Open_SRs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Primary_Focus_Area__c</columns>
    <columns>Specialist_Assigned__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Date_of_Meeting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>SEM Approved,Specialist Accepted</value>
    </filters>
    <label>Open SRs</label>
</ListView>