force-app/main/default/objects/Specialist_Request__c/listViews/SEM_Approved.listView-meta.xml
<ListView>
    <fullName>SEM_Approved</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Primary_Focus_Area__c</columns>
    <columns>Secondary_Focus_Area__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Goal_Of_Meeting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>SEM Approved</value>
    </filters>
    <label>SEM Approved</label>
</ListView>