force-app/main/default/objects/Specialist_Request__c/listViews/Submitted.listView-meta.xml
<ListView>
    <fullName>Submitted</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Primary_Focus_Area__c</columns>
    <columns>Secondary_Focus_Area__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Date_of_Meeting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted</label>
</ListView>